[gd_scene load_steps=4 format=3 uid="uid://171ratdvfebn"]

[ext_resource type="AudioStream" uid="uid://cwuthsoolsen5" path="res://Assets/Audios/Confirm-upgrade.ogg" id="1_1ymo1"]
[ext_resource type="Script" path="res://Instances/UI/UpgradeSelectorCard/UpgradeSelectorCard.gd" id="1_78j2r"]
[ext_resource type="AudioStream" uid="uid://bu7ctpa77iw66" path="res://Assets/Audios/levelUp.mp3" id="2_fejxk"]

[node name="UpgradeSelectorCard" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_78j2r")

[node name="AudioPlayerSelectUpgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_1ymo1")
bus = &"Sound"

[node name="AudioPlayerLevelUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fejxk")
bus = &"Sound"
